change owner controller
